# ChoUtils

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  build.sh
cho_util/: CMakeLists.txt
cho_util/core/: CMakeLists.txt
cho_util/core/include/cho_util/core/: enum_hash.hpp  geometry.hpp  math.hpp  random.hpp  random_convex_polygon.hpp  serialize_eigen.hpp  serialize_enum.hpp  serialize_std_variant.hpp  thread_safe_queue.hpp  version.hpp
cho_util/core/include/cho_util/core/geometry/: cuboid.hpp  cylinder.hpp  geometry_base.hpp  line.hpp  plane.hpp  point.hpp  point_cloud.hpp  sphere.hpp
cho_util/core/src/: math.cpp  random.cpp
cho_util/core/test/: CMakeLists.txt  test_generate_convex_polygon.cpp
cho_util/io/: CMakeLists.txt
cho_util/io/include/cho_util/io/: filter.hpp  filter_io_fwd.hpp  io.hpp  io_fwd.hpp  pipe_io.hpp  pipe_io_fwd.hpp  queue_io.hpp  queue_io_fwd.hpp
cho_util/proto/: CMakeLists.txt  geometry.proto  render.proto
cho_util/python/: CMakeLists.txt
cho_util/python/src/: module.cpp
cho_util/type/: CMakeLists.txt
cho_util/type/include/cho_util/type/: convert.hpp
cho_util/type/src/: convert.cpp
cho_util/util/: CMakeLists.txt
cho_util/util/include/cho_util/util/: mp_utils.hpp  profiler.hpp  timer.hpp
cho_util/util/src/: profiler.cpp  timer.cpp
cho_util/vis/: CMakeLists.txt
cho_util/vis/imgui_viewer/: CMakeLists.txt
cho_util/vis/imgui_viewer/include/cho_util/vis/imgui_viewer/: imgui_viewer.hpp
cho_util/vis/imgui_viewer/include/glad/: glad.h
cho_util/vis/imgui_viewer/src/: glad.c  imgui_viewer.cpp
cho_util/vis/imgui_viewer/test/: CMakeLists.txt  imgui_viewer_test.cpp
cho_util/vis/include/cho_util/vis/: convert_proto.hpp  direct_viewer.hpp  embedded_viewer.hpp  event_data.hpp  handler_fwd.hpp  handlers.hpp  io.hpp  io_fwd.hpp  pipe_io.hpp  pipe_io_fwd.hpp  queue_io.hpp  queue_io_fwd.hpp  remote_viewer.hpp  remote_viewer_client.hpp  remote_viewer_server.hpp  render_data.hpp  render_data_fwd.hpp  subprocess.hpp  subprocess_viewer.hpp  viewer_base.hpp  vtk_viewer.hpp  vtk_viewer_fwd.hpp
cho_util/vis/include/cho_util/vis/handler/: cloud_handler.hpp  cuboid_handler.hpp  cylinder_handler.hpp  line_handler.hpp  line_strip_handler.hpp  plane_handler.hpp  point_handler.hpp  point_pair_line_filter.hpp  poly_point_source.hpp  sphere_handler.hpp  vertex_color_filter.hpp
cho_util/vis/src/: convert_proto.cpp  direct_viewer.cpp  embedded_viewer.cpp  handlers.cpp  main.cpp  parse_data.cpp  point_pair_line_filter.cpp  poly_point_source.cpp  remote_viewer.cpp  remote_viewer_client.cpp  remote_viewer_server.cpp  remote_viewer_server_app.cpp  subprocess.cpp  subprocess_viewer.cpp  vertex_color_filter.cpp  vtk_viewer.cpp
cho_util/vis/vtk_viewer/: CMakeLists.txt
cho_util/vis/vtk_viewer/include/cho_util/vis/vtk_viewer/: handlers.hpp  vtk_viewer.hpp  vtk_viewer_fwd.hpp
cho_util/vis/vtk_viewer/include/cho_util/vis/vtk_viewer/handler/: cloud_handler.hpp  color_filter.hpp  cuboid_handler.hpp  cylinder_handler.hpp  handler_base.hpp  line_handler.hpp  line_strip_handler.hpp  plane_handler.hpp  point_handler.hpp  point_pair_line_filter.hpp  sphere_handler.hpp  vertex_color_filter.hpp
cho_util/vis/vtk_viewer/src/: color_filter.cpp  point_pair_line_filter.cpp  poly_point_source.cpp  vertex_color_filter.cpp  vtk_viewer.cpp
cmake/: ChoUtilPackage.cmake  ChoUtilVersion.cmake  GrpcProto.cmake
test/: CMakeLists.txt  direct_viewer_test.cpp  main.cpp  remote_viewer_client.cpp
